# cerbero

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-image-tags.yml  .pre-commit-config.yaml  MANIFEST.in.in  Makefile  README  README.md  cerbero-uninstalled  cerbero-uninstalled.bat  cerbero-uninstalled.ps1  pyproject.toml  recipe-upgrade-list.txt  ruff.toml  setup.py
cerbero/: bootstrap.py  build.py  config.py  cookbook.py  enums.py  errors.py  hacks.py  main.py  oven.py  recipe.py  source.py
ci/: cerbero_setup.sh  checks_setup.sh  docker_android_setup.sh  docker_setup.sh  examples_setup.sh  exists_branch_in_user_repo.sh  generate_rules.py  run_retry.sh
config/: android.config  build-tools.cbc  cross-android-arm64.cbc  cross-android-armv7.cbc  cross-android-riscv64.cbc  cross-android-universal.cbc  cross-android-x86-64.cbc  cross-android-x86.cbc  cross-android.cbc  cross-ios-arm64.cbc  cross-ios-arm7.cbc  cross-ios-arm7s.cbc  cross-ios-sim-arm64.cbc  cross-ios-sim-universal.cbc  cross-ios-sim-x86-64.cbc  cross-ios-universal.cbc  cross-ios-x86-64.cbc  cross-ios-x86.cbc  cross-lin-arm.cbc  cross-lin-arm64.cbc  cross-lin-x86.cbc  cross-macos-arm64.cbc  cross-macos-universal.cbc  cross-macos-x86-64.cbc  cross-tvos-arm64.cbc  cross-tvos-sim-arm64.cbc  cross-tvos-sim-universal.cbc  cross-tvos-sim-x86-64.cbc  cross-uwp-universal.cbc  cross-win-arm64.cbc  cross-win-armv7.cbc  cross-win32.cbc  cross-win64.cbc  darwin.config  ios.config  linux.config  mingw-multilib-lin.cbc  mingw-multilib-win.cbc  mingw-w32-lin.cbc  mingw-w32-win.cbc  (+14 more)
docs/: toolchains.md
(+1749 files in other folders)
